# midas-journal-800

./: CMakeLists.txt  Data\fixed30.mha  Data\fixedAP.level0.baseline.mha  Data\fixedLAT.roi.mha  Data\outDir\subtraction00.mha  README.rst  Testing\itkMeanSquaresMultiImageToImageMetricTest.cxx  Testing\itkMultiResolutionMultiImageToImageRegistrationMethodTest1.cxx  Testing\itkNormalizedGradientCorrelationMultiImageToImageMetricTest.cxx  Testing\itkPatchedRayCastInterpolateImageFunctionTest.cxx  itk-module.cmake  itkMultiImageToImageRegistrationMethod.txx  setup.py
.circleci/: config.yml
Data/: fixed30.roi.mha  fixed60.mha  fixed60.roi.mha  fixedAP.level1.baseline.mha  fixedAP.mha  fixedAP.roi.mha  fixedLAT.level0.baseline.mh  fixedLAT.level1.baseline.mha  fixedLAT.mha  inTransform.txt
Data/outDir/: inMatrix.txt  log.txt  outMatrix.txt  outTransform.txt  projection00.mha  projection01.mha  subtraction01.mha
examples/: MultiImageRegistration.cxx
include/: itkMinimalStandardRandomVariateGenerator.h  itkNormalDistributionImageSource.h  itkPatchedRayCastInterpolateImageFunction.h
src/: CMakeLists.txt
test/: CMakeLists.txt  itkGradientDifferenceMultiImageToImageMetricTest.cxx  itkMultiImageToImageRegistrationMethodTest0.cxx  itkMultiImageToImageRegistrationMethodTest1.cxx  itkMultiResolutionMultiImageToImageRegistrationMethodTest0.cxx  itkMultiResolutionMultiImageToImageRegistrationMethodTest2.cxx  itkPatternIntensityMultiImageToImageMetricTest.cxx
wrapping/: CMakeLists.txt
